--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="tr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kodluyoruz</title>
 </head>
 
@@ -15,7 +15,41 @@
     <h2>Hakkımda</h2>
     <!--parağraf etiketi-->
     <!--br etiketi cümle alt satırdan devam eder-->
-    <p>Merhaba ben Zübeyde Öztürk Ankara'da yaşıyorum. </p>
+    <p>Merhaba ben Zübeyde Öztürk Ankara'da yaşıyorum.</p>
+    <h3>İlgi Alanlarım</h3>
+    <ol>
+        <li>
+            Film
+            <ul>
+                <li>The Irishman</li>
+                <li> <a href="https://www.fullhdfilmizlesene.com/film/jkrrr-hd-izle-full/">Joker</a> </li>
+                <li>Cinayet Süsü</li>
+            </ul>
+        </li>
+        <li>
+            Dizi
+            <ul>
+                <li>Şahsiyet</li>
+                <li>Lupin</li>
+                <li>Fleabag </li>
+            </ul>
+        </li>
+        <li>
+            Kitap
+            <ul>
+                <li>İki Şehrin Hikayesi</li>
+                <li>Bir İdam Mahkümunu Son Günü</li>
+                <li> <a href="https://www.goodreads.com/book/show/1220467.Satran_?from_search=true&from_srp=true&qid=0uhmD7xhXA&rank=2">Satranç</a> </li>
+            </ul>
+        </li>
+    </ol>
+    <h2>Sevdiğim Diziler</h2>
+    <h3>Şahsiyet</h3> 
+    <div>
+        <img src="../img/img.jpg" width="20%" height="50%" alt="Şahsiyet, Ay Yapım imzalı, ilk bölümü 17 Mart 2018 tarihinde yayınlandı.">
+        <p>Şahsiyet, Ay Yapım imzalı, ilk bölümü 17 Mart 2018 tarihinde yayınlandı.</p>
+    </div>
+
 </body>
 
 </html>
